source/externs/X11/extensions/XI2proto.h


#define Window  uint32_t
#define Time    uint32_t
#define Atom    uint32_t
#define Barrier uint32_t
#define X_XIChangeProperty              57
#define X_XIDeleteProperty              58
#define X_XIGetProperty                 59
#define X_XIBarrierReleasePointer       61
typedef int32_t FP1616;
typedef struct {
    int32_t     integral;
    uint32_t    frac;
} FP3232;
typedef struct
{
    uint32_t    base_mods;              
    uint32_t    latched_mods;           
    uint32_t    locked_mods;            
    uint32_t    effective_mods;         
} xXIModifierInfo;
typedef struct
{
    uint8_t     base_group;             
    uint8_t     latched_group;          
    uint8_t     locked_group;           
    uint8_t     effective_group;        
} xXIGroupInfo;
#define sz_xXIListPropertiesReply               32
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    uint16_t    deviceid;
    uint8_t     mode;
    uint8_t     format;
    Atom        property;
    Atom        type;
    uint32_t    num_items;
} xXIChangePropertyReq;
#define sz_xXIChangePropertyReq                 20
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    uint16_t    deviceid;
    uint16_t    pad0;
    Atom        property;
} xXIDeletePropertyReq;
#define sz_xXIDeletePropertyReq                 12
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    uint16_t    deviceid;
#if defined(__cplusplus) || defined(c_plusplus)
    uint8_t     c_delete;
#else
    uint8_t     delete_;
#endif
    uint8_t     pad0;
    Atom        property;
    Atom        type;
    uint32_t    offset;
    uint32_t    len;
} xXIGetPropertyReq;
#define sz_xXIGetPropertyReq                    24
typedef struct {
    uint8_t     repType;                
    uint8_t     RepType;                
    uint16_t    sequenceNumber;
    uint32_t    length;
    Atom        type;
    uint32_t    bytes_after;
    uint32_t    num_items;
    uint8_t     format;
    uint8_t     pad0;
    uint16_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
} xXIGetPropertyReply;
#define sz_xXIGetPropertyReply               32
typedef struct {
    uint16_t    deviceid;
    uint16_t    pad;
    Barrier     barrier;
    uint32_t    eventid;
} xXIBarrierReleasePointerInfo;
typedef struct {
    uint8_t     reqType;                
    uint8_t     ReqType;                
    uint16_t    length;
    uint32_t    num_barriers;
} xXIBarrierReleasePointerReq;
#define sz_xXIBarrierReleasePointerReq       8
typedef struct
{
    uint8_t     type;
    uint8_t     extension;              
    uint16_t    sequenceNumber;
    uint32_t    length;
    uint16_t    evtype;
    uint16_t    deviceid;
    Time        time;
} xXIGenericDeviceEvent;
typedef struct
{
    uint16_t    deviceid;
    uint16_t    attachment;             
    uint8_t     use;                    
    BOOL        enabled;                
    uint16_t    pad;
    uint32_t    flags;                  
} xXIHierarchyInfo;
typedef struct
{
    uint8_t     type;                   
    uint8_t     extension;              
    uint16_t    sequenceNumber;
    uint32_t    length;                 
    uint16_t    evtype;                 
    uint16_t    deviceid;
    Time        time;
    uint32_t    flags;                  
    uint16_t    num_info;
    uint16_t    pad0;
    uint32_t    pad1;
    uint32_t    pad2;
} xXIHierarchyEvent;
typedef struct
{
    uint8_t     type;                   
    uint8_t     extension;              
    uint16_t    sequenceNumber;
    uint32_t    length;                 
    uint16_t    evtype;                 
    uint16_t    deviceid;               
    Time        time;
    uint16_t    num_classes;            
    uint16_t    sourceid;               
    uint8_t     reason;                 
    uint8_t     pad0;
    uint16_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
} xXIDeviceChangedEvent;
typedef struct
{
    uint8_t     type;               
    uint8_t     extension;          
    uint16_t    sequenceNumber;
    uint32_t    length;             
    uint16_t    evtype;             
    uint16_t    deviceid;           
    Time        time;
    uint32_t    touchid;
    Window      root;
    Window      event;
    Window      child;
    uint16_t    sourceid;
    uint16_t    pad0;
    uint32_t    flags;
    uint32_t    pad1;
    uint32_t    pad2;
} xXITouchOwnershipEvent;
typedef struct
{
    uint8_t     type;                   
    uint8_t     extension;              
    uint16_t    sequenceNumber;
    uint32_t    length;                 
    uint16_t    evtype;
    uint16_t    deviceid;
    Time        time;
    uint32_t    detail;                 
    Window      root;
    Window      event;
    Window      child;
    FP1616      root_x;                 
    FP1616      root_y;
    FP1616      event_x;                
    FP1616      event_y;
    uint16_t    buttons_len;            
    uint16_t    valuators_len;          
    uint16_t    sourceid;               
    uint16_t    pad0;
    uint32_t    flags;                  
    xXIModifierInfo     mods;
    xXIGroupInfo        group;
} xXIDeviceEvent;
typedef struct
{
    uint8_t     type;                   
    uint8_t     extension;              
    uint16_t    sequenceNumber;
    uint32_t    length;                 
    uint16_t    evtype;                 
    uint16_t    deviceid;
    Time        time;
    uint32_t    detail;
    uint16_t    sourceid;               
    uint16_t    valuators_len;          
    uint32_t    flags;                  
    uint32_t    pad2;
} xXIRawEvent;
typedef struct
{
    uint8_t     type;                   
    uint8_t     extension;              
    uint16_t    sequenceNumber;
    uint32_t    length;                 
    uint16_t    evtype;                 
    uint16_t    deviceid;
    Time        time;
    uint16_t    sourceid;
    uint8_t     mode;
    uint8_t     detail;
    Window      root;
    Window      event;
    Window      child;
    FP1616      root_x;
    FP1616      root_y;
    FP1616      event_x;
    FP1616      event_y;
    BOOL        same_screen;
    BOOL        focus;
    uint16_t    buttons_len;            
    xXIModifierInfo     mods;
    xXIGroupInfo        group;
} xXIEnterEvent;
typedef xXIEnterEvent xXILeaveEvent;
typedef xXIEnterEvent xXIFocusInEvent;
typedef xXIEnterEvent xXIFocusOutEvent;
typedef struct
{
    uint8_t     type;                   
    uint8_t     extension;              
    uint16_t    sequenceNumber;
    uint32_t    length;                 
    uint16_t    evtype;                 
    uint16_t    deviceid;
    Time        time;
    Atom        property;
    uint8_t     what;                   
    uint8_t     pad0;
    uint16_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
} xXIPropertyEvent;
typedef struct
{
    uint8_t     type;                   
    uint8_t     extension;              
    uint16_t    sequenceNumber;
    uint32_t    length;                 
    uint16_t    evtype;                 
    uint16_t    deviceid;
    Time        time;
    uint32_t    eventid;
    Window      root;
    Window      event;
    Barrier     barrier;
    uint32_t    dtime;
    uint32_t    flags;                  
    uint16_t    sourceid;
    int16_t     pad;
    FP1616      root_x;
    FP1616      root_y;
    FP3232      dx;
    FP3232      dy;
} xXIBarrierEvent;
typedef xXIBarrierEvent xXIBarrierHitEvent;
typedef xXIBarrierEvent xXIBarrierPointerReleasedEvent;
typedef xXIBarrierEvent xXIBarrierLeaveEvent;
typedef struct
{
    uint8_t     type;                   
    uint8_t     extension;              
    uint16_t    sequenceNumber;
    uint32_t    length;                 
    uint16_t    evtype;
    uint16_t    deviceid;
    Time        time;
    uint32_t    detail;                 
    Window      root;
    Window      event;
    Window      child;
    FP1616      root_x;                 
    FP1616      root_y;
    FP1616      event_x;                
    FP1616      event_y;
    FP1616      delta_x;
    FP1616      delta_y;
    FP1616      delta_unaccel_x;
    FP1616      delta_unaccel_y;
    FP1616      scale;
    FP1616      delta_angle;
    uint16_t    sourceid;               
    uint16_t    pad0;
    xXIModifierInfo     mods;
    xXIGroupInfo        group;
    uint32_t    flags;                  
} xXIGesturePinchEvent;