source/externs/X11/X.h

#define GenericEvent		35
#define Always                  2