source/externs/X11/extensions/XI2proto.d

enum sz_xXIListPropertiesReply =               32;

/**
 * Change a property on the specified device.
 */
struct xXIChangePropertyReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XIChangeProperty */
    ushort length;                 /**< Length in 4 byte units */
    ushort deviceid;
    ubyte mode;
    ubyte format;
    Atom property;
    Atom type;
    uint num_items;
}
enum sz_xXIChangePropertyReq =                 20;

/**
 * Delete the specified property.
 */
struct xXIDeletePropertyReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always X_XIDeleteProperty */
    ushort length;                 /**< Length in 4 byte units */
    ushort deviceid;
    ushort pad0;
    Atom property;
}
enum sz_xXIDeletePropertyReq =                 12;

/**
 * Query the specified property's values.
 */
struct xXIGetPropertyReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always X_XIGetProperty */
    ushort length;                 /**< Length in 4 byte units */
    ushort deviceid;
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    ubyte c_delete;
} else {
    ubyte delete_;
}
    ubyte pad0;
    Atom property;
    Atom type;
    uint offset;
    uint len;
}
enum sz_xXIGetPropertyReq =                    24;

struct xXIGetPropertyReply {
    ubyte repType;                /**< Input extension major opcode */
    ubyte RepType;                /**< Always X_XIGetProperty */
    ushort sequenceNumber;
    uint length;
    Atom type;
    uint bytes_after;
    uint num_items;
    ubyte format;
    ubyte pad0;
    ushort pad1;
    uint pad2;
    uint pad3;
}
enum sz_xXIGetPropertyReply =               32;

struct xXIBarrierReleasePointerInfo {
    ushort deviceid;
    ushort pad;
    Barrier barrier;
    uint eventid;
}

struct xXIBarrierReleasePointerReq {
    ubyte reqType;                /**< Input extension major opcode */
    ubyte ReqType;                /**< Always X_XIBarrierReleasePointer */
    ushort length;
    uint num_barriers;
    /* array of xXIBarrierReleasePointerInfo */
}
enum sz_xXIBarrierReleasePointerReq =       8;

/*************************************************************************************
 *                                                                                   *
 *                                      EVENTS                                       *
 *                                                                                   *
 *************************************************************************************/

/**
 * Generic XI2 event header. All XI2 events use the same header.
 */
struct xXIGenericDeviceEvent {
    ubyte type;
    ubyte extension;              /**< XI extension offset */
    ushort sequenceNumber;
    uint length;
    ushort evtype;
    ushort deviceid;
    Time time;
}

/**
 * Device hierarchy information.
 */
struct xXIHierarchyInfo {
    ushort deviceid;
    ushort attachment;             /**< ID of master or paired device */
    ubyte use;                    /**< ::XIMasterKeyboard,
                                             ::XIMasterPointer,
                                             ::XISlaveKeyboard,
                                             ::XISlavePointer,
                                             ::XIFloatingSlave */
    BOOL enabled;                /**< TRUE if the device is enabled */
    ushort pad;
    uint flags;                  /**< ::XIMasterAdded, ::XIMasterRemoved,
                                             ::XISlaveAttached, ::XISlaveDetached,
                                             ::XISlaveAdded, ::XISlaveRemoved,
                                             ::XIDeviceEnabled, ::XIDeviceDisabled */
}

/**
 * The device hierarchy has been modified. This event includes the device
 * hierarchy after the modification has been applied.
 */
struct xXIHierarchyEvent {
    ubyte type;                   /**< Always GenericEvent */
    ubyte extension;              /**< XI extension offset */
    ushort sequenceNumber;
    uint length;                 /**< Length in 4 byte units */
    ushort evtype;                 /**< ::XI_Hierarchy */
    ushort deviceid;
    Time time;
    uint flags;                  /**< ::XIMasterAdded, ::XIMasterDeleted,
                                             ::XISlaveAttached, ::XISlaveDetached,
                                             ::XISlaveAdded, ::XISlaveRemoved,
                                             ::XIDeviceEnabled, ::XIDeviceDisabled */
    ushort num_info;
    ushort pad0;
    uint pad1;
    uint pad2;
}

/**
 * A device has changed capabilities.
 */
struct xXIDeviceChangedEvent {
    ubyte type;                   /**< Always GenericEvent */
    ubyte extension;              /**< XI extension offset */
    ushort sequenceNumber;
    uint length;                 /**< Length in 4 byte units */
    ushort evtype;                 /**< XI_DeviceChanged */
    ushort deviceid;               /**< Device that has changed */
    Time time;
    ushort num_classes;            /**< Number of classes that have changed */
    ushort sourceid;               /**< Source of the new classes */
    ubyte reason;                 /**< ::XISlaveSwitch, ::XIDeviceChange */
    ubyte pad0;
    ushort pad1;
    uint pad2;
    uint pad3;
}

/**
 * The owner of a touch stream has passed on ownership to another client.
 */
struct xXITouchOwnershipEvent {
    ubyte type;               /**< Always GenericEvent */
    ubyte extension;          /**< XI extension offset */
    ushort sequenceNumber;
    uint length;             /**< Length in 4 byte units */
    ushort evtype;             /**< XI_TouchOwnership */
    ushort deviceid;           /**< Device that has changed */
    Time time;
    uint touchid;
    Window root;
    Window event;
    Window child;
/* └──────── 32 byte boundary ────────┘ */
    ushort sourceid;
    ushort pad0;
    uint flags;
    uint pad1;
    uint pad2;
}

/**
 * Default input event for pointer, keyboard or touch input.
 */
struct xXIDeviceEvent {
    ubyte type;                   /**< Always GenericEvent */
    ubyte extension;              /**< XI extension offset */
    ushort sequenceNumber;
    uint length;                 /**< Length in 4 byte uints */
    ushort evtype;
    ushort deviceid;
    Time time;
    uint detail;                 /**< Keycode or button */
    Window root;
    Window event;
    Window child;
/* └──────── 32 byte boundary ────────┘ */
    FP1616 root_x;                 /**< Always screen coords, 16.16 fixed point */
    FP1616 root_y;
    FP1616 event_x;                /**< Always screen coords, 16.16 fixed point */
    FP1616 event_y;
    ushort buttons_len;            /**< Len of button flags in 4 b units */
    ushort valuators_len;          /**< Len of val. flags in 4 b units */
    ushort sourceid;               /**< The source device */
    ushort pad0;
    uint flags;                  /**< ::XIKeyRepeat */
    xXIModifierInfo mods;
    xXIGroupInfo group;
}


/**
 * Sent when an input event is generated. RawEvents include valuator
 * information in both device-specific data (i.e. unaccelerated) and
 * processed data (i.e. accelerated, if applicable).
 */
struct xXIRawEvent {
    ubyte type;                   /**< Always GenericEvent */
    ubyte extension;              /**< XI extension offset */
    ushort sequenceNumber;
    uint length;                 /**< Length in 4 byte uints */
    ushort evtype;                 /**< ::XI_RawEvent */
    ushort deviceid;
    Time time;
    uint detail;
    ushort sourceid;               /**< The source device (XI 2.1) */
    ushort valuators_len;          /**< Length of trailing valuator
                                             mask in 4 byte units */
    uint flags;                  /**< ::XIKeyRepeat */
    uint pad2;
}

/**
 * Note that the layout of root, event, child, root_x, root_y, event_x,
 * event_y must be identical to the xXIDeviceEvent.
 */
struct xXIEnterEvent {
    ubyte type;                   /**< Always GenericEvent */
    ubyte extension;              /**< XI extension offset */
    ushort sequenceNumber;
    uint length;                 /**< Length in 4 byte uints */
    ushort evtype;                 /**< ::XI_Enter */
    ushort deviceid;
    Time time;
    ushort sourceid;
    ubyte mode;
    ubyte detail;
    Window root;
    Window event;
    Window child;
/* └──────── 32 byte boundary ────────┘ */
    FP1616 root_x;
    FP1616 root_y;
    FP1616 event_x;
    FP1616 event_y;
    BOOL same_screen;
    BOOL focus;
    ushort buttons_len;            /**< Length of trailing button mask
                                             in 4 byte units */
    xXIModifierInfo mods;
    xXIGroupInfo group;
}

alias xXILeaveEvent = xXIEnterEvent;
alias xXIFocusInEvent = xXIEnterEvent;
alias xXIFocusOutEvent = xXIEnterEvent;

/**
 * Sent when a device property is created, modified or deleted. Does not
 * include property data, the client is required to query the data.
 */
struct xXIPropertyEvent {
    ubyte type;                   /**< Always GenericEvent */
    ubyte extension;              /**< XI extension offset */
    ushort sequenceNumber;
    uint length;                 /**< Length in 4 byte units */
    ushort evtype;                 /**< ::XI_PropertyEvent */
    ushort deviceid;
    Time time;
    Atom property;
    ubyte what;                   /**< ::XIPropertyDeleted,
                                             ::XIPropertyCreated,
                                             ::XIPropertyMotified */
    ubyte pad0;
    ushort pad1;
    uint pad2;
    uint pad3;
}

struct xXIBarrierEvent {
    ubyte type;                   /**< Always GenericEvent */
    ubyte extension;              /**< XI extension offset */
    ushort sequenceNumber;
    uint length;                 /**< Length in 4 byte units */
    ushort evtype;                 /**< ::XI_BarrierHit or ::XI_BarrierLeave */
    ushort deviceid;
    Time time;
    uint eventid;
    Window root;
    Window event;
    Barrier barrier;
/* └──────── 32 byte boundary ────────┘ */
    uint dtime;
    uint flags;                  /**< ::XIBarrierPointerReleased
                                             ::XIBarrierDeviceIsGrabbed */
    ushort sourceid;
    short pad;
    FP1616 root_x;
    FP1616 root_y;
    FP3232 dx;
    FP3232 dy;
}

alias xXIBarrierHitEvent = xXIBarrierEvent;
alias xXIBarrierPointerReleasedEvent = xXIBarrierEvent;
alias xXIBarrierLeaveEvent = xXIBarrierEvent;

/**
 * Event for touchpad gesture pinch input events
 */
struct xXIGesturePinchEvent {
    ubyte type;                   /**< Always GenericEvent */
    ubyte extension;              /**< XI extension offset */
    ushort sequenceNumber;
    uint length;                 /**< Length in 4 byte uints */
    ushort evtype;
    ushort deviceid;
    Time time;
    uint detail;                 /**< The number of touches in the gesture */
    Window root;
    Window event;
    Window child;
/* └──────── 32 byte boundary ────────┘ */
    FP1616 root_x;                 /**< Always screen coords, 16.16 fixed point */
    FP1616 root_y;
    FP1616 event_x;                /**< Always screen coords, 16.16 fixed point */
    FP1616 event_y;
    FP1616 delta_x;
    FP1616 delta_y;
    FP1616 delta_unaccel_x;
    FP1616 delta_unaccel_y;
    FP1616 scale;
    FP1616 delta_angle;
    ushort sourceid;               /**< The source device */
    ushort pad0;
    xXIModifierInfo mods;
    xXIGroupInfo group;
    uint flags;                  /**< ::XIGesturePinchEventCancelled */
}
